# cavalo-doido

./: Cargo.toml  MACOS_INSTALLER.md  build-macos-installer.sh
src/: limiter.rs  main.rs  ui.rs
