[package]
name = "cpu_limiter"
version = "0.1.0"
edition = "2024"
authors = ["Alex Fonseca"]
description = "CPU Limiter - Controle o uso de CPU de aplicações específicas"

[[bin]]
name = "cpu_limiter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
eframe = { version = "0.33.3", features = ["glow", "default"] }
env_logger = "0.11.8"
image = "0.25.9"
log = "0.4.29"
nix = { version = "0.31.1", features = ["signal", "process"] }
parking_lot = "0.12.5"
sysinfo = "0.38.0"
tokio = { version = "1.49.0", features = ["full"] }
tray-icon = "0.21.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3"
